---
source: src/lib/codegen/templates.rs
expression: "accessors_cargo_toml(PROJECT_NAME, dependencies)"
---
[package]
name = "sample_accessors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_bytes.workspace = true
hex.workspace = true

ic-web3-rs.workspace = true
ic-solidity-bindgen.workspace = true
chainsight-cdk-macros.workspace = true
chainsight-cdk.workspace = true

sample_snapshot_bindings = { path = "../../bindings/sample_snapshot_bindings" }
sample_lens_bindings = { path = "../../bindings/sample_lens_bindings" }

